# pk_alm

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: 01_final_model_documentation.md  02_architecture_decisions.md  03_results_and_validation.md  04_user_workflow.md  05_limitations_and_future_work.md  cockpit_redesign_findings.md  decisions.md  domain_notes.md  implementation_progress.md  results_review.md  stage1_freeze.md  stage1_outputs.md  stage1_pipeline.md  stage1_spec.md  stage2_extensions_summary.md  stage2_roadmap.md  stage2_spec.md  time_grid_feasibility.md  user_workflow.md
examples/: enhanced_bvg_config.json  full_alm_reporting_workflow.py  run_stage1.py  stage1_actus.py  stage1_baseline.py  stage2a_actus.py  stage2a_baseline.py  stage2b_actus.py  stage2c_dynamic_parameters.py  stage2d_stochastic.py  streamlit_full_alm_app.py  test_enhanced_bvg.py
scripts/: probe_actus_contract_types.py
tests/: test_aal_asset_boundary.py  test_aal_asset_portfolio.py  test_aal_introspection.py  test_aal_optional_smoke.py  test_aal_probe.py  test_aal_real_contract_smoke.py  test_aal_risk_factors.py  test_aal_simulation_settings_filters.py  test_actus_adapter.py  test_alm_analytics_engine.py  test_analytics_alm_kpis.py  test_analytics_cashflows.py  test_analytics_distributional.py  test_analytics_funding.py  test_analytics_funding_summary.py  test_asset_mode_scenarios.py  test_assets_aal_engine.py  test_assets_actus_trajectory.py  test_assets_deterministic.py  test_assumptions_layer.py  test_bvg_cashflow_generation.py  test_bvg_cohorts.py  test_bvg_dynamic_parameters.py  test_bvg_engine.py  test_bvg_engine_stage2.py  test_bvg_engine_stage2c.py  test_bvg_engine_stage2d.py  test_bvg_entry_dynamics.py  test_bvg_formulas.py  test_bvg_monthly_cashflow_generation.py  test_bvg_mortality.py  test_bvg_mortality_valuation.py  test_bvg_portfolio.py  test_bvg_portfolio_projection.py  test_bvg_projection.py  test_bvg_salary_dynamics.py  (+35 more)
(+212 files in other folders)
