[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pk-alm"
version = "0.1.0"
description = "Deterministic Stage 1 ALM baseline for pension fund portfolio analytics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "awesome-actus-lib>=1.0.12",
]

[project.optional-dependencies]
app = ["streamlit>=1.32", "plotly>=5.18"]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "plotly>=5.18",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pk_alm.bvg_liability_engine.actuarial_assumptions.data" = ["*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
